--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,46 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
-ext {
-    GROUP_ID = 'io.github.v7lin'
-    VERSION_CODE = 1000
-    VERSION_NAME = '1.0.0'
-//    VERSION_NAME = '1.0.0-SNAPSHOT'
+def publishToJFrog() {
+    return 'true' == System.getenv('PUBLISH_TO_JFROG')
+}
 
-    SITE_URL = 'https://github.com/v7lin/android-redux'
-    GIT_URL = 'https://github.com/v7lin/android-redux.git'
-    ISSUE_TRACKER_URL = 'https://github.com/v7lin/android-redux/issues'
+def publishToJCenter() {
+    return 'true' == System.getenv('PUBLISH_TO_JCENTER')
+}
+
+def bintrayUser() {
+    return project.hasProperty('BINTRAY_USER') ? project.property('BINTRAY_USER') : System.getenv('BINTRAY_USER')
+}
+
+def bintrayApiKey() {
+    return project.hasProperty('BINTRAY_API_KEY') ? project.property('BINTRAY_API_KEY') : System.getenv('BINTRAY_API_KEY')
+}
+
+def buildVersionCode() {
+    return new Date().format("yyyyMMddHH", TimeZone.getTimeZone("GMT+8")).toInteger()
+}
+
+def buildVersionName() {
+    String versionName = System.getenv('VERSION_NAME')
+    return versionName != null && !versionName.isEmpty() ? versionName : '0.0.1'
+}
+
+ext {
+    PUBLISH_TO_JFROG = publishToJFrog()
+
+    PUBLISH_TO_JCENTER = publishToJCenter()
+
+    BINTRAY_USER = bintrayUser()
+    BINTRAY_API_KEY = bintrayApiKey()
+
+    GROUP_ID = 'io.github.v7lin'
+    VERSION_CODE = buildVersionCode()
+    VERSION_NAME = buildVersionName()//'x.y.z'/'x.y.z-SNAPSHOT'
+
+    SITE_URL = 'https://github.com/v7lin/android-speech'
+    GIT_URL = 'https://github.com/v7lin/android-speech.git'
+    ISSUE_SYSTEM = 'GitHub'
+    ISSUE_TRACKER_URL = 'https://github.com/v7lin/android-speech/issues'
 
     LICENSE_APACHE_NAME = 'The Apache Software License, Version 2.0'
     LICENSE_APACHE_URL = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
@@ -24,11 +56,14 @@ buildscript {
         google()
         jcenter()
     }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.1'
 
-        // publish to jcenter
+    dependencies {
+        classpath 'com.android.tools.build:gradle:3.3.0'
+
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'// https://github.com/dcendents/android-maven-gradle-plugin#note-on-release
+        // publish to JFrog
+        classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.9.0"
+        // publish to JCenter
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'// https://github.com/bintray/gradle-bintray-plugin#Getting_Started_Using_the_Plugin
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -45,6 +80,19 @@ allprojects {
     repositories {
         google()
         jcenter()
+
+        maven {
+            url 'https://oss.jfrog.org/artifactory/oss-snapshot-local'
+        }
+
+        // JCenter 第一个版本审核通过之前需要
+        maven {
+            url  "https://dl.bintray.com/v7lin/maven"
+            credentials {
+                username BINTRAY_USER
+                password BINTRAY_API_KEY
+            }
+        }
     }
 }
 
@@ -58,7 +106,7 @@ subprojects {
         // ---
 
         androidMinSdkVersion = 14
-        androidTargetSdkVersion = 28
+        androidTargetSdkVersion = 21
 
         // ---
 
@@ -75,8 +123,8 @@ subprojects {
 
         junitVersion = '4.12'
 
-        runnerVersion = '1.0.2'
-        espressoVersion = '3.0.2'
+        runnerVersion = '1.1.0-alpha4'
+        espressoVersion = '3.1.0-alpha4'
     }
 }
 
