--- a/.drone.yml
+++ b/.drone.yml
@@ -4,28 +4,37 @@ name: default
 steps:
 - name: build
   image: runmymind/docker-android-sdk
+  volumes:
+  - name: gradle
+    path: /root/.gradle
   commands:
   - ./gradlew :json:clean :json:build
   - ./gradlew :okhttp3:clean :okhttp3:build
   - ./gradlew :okhttp3-android:clean :okhttp3-android:build
   - ./gradlew :app:clean :app:build
 
-#- name: snapshot
-#  image: runmymind/docker-android-sdk
-#  environment:
-#    PUBLISH_TO_JFROG: true
-#    BINTRAY_USER:
-#      from_secret: BINTRAY_USER
-#    BINTRAY_API_KEY:
-#      from_secret: BINTRAY_API_KEY
-#    VERSION_NAME: 0.0.1-SNAPSHOT
-#  commands:
-#  - ./gradlew :json:clean :json:install :json:artifactoryPublish
-#  - ./gradlew :okhttp3:clean :okhttp3:install :okhttp3:artifactoryPublish
-#  - ./gradlew :okhttp3-android:clean :okhttp3-android:install :okhttp3-android:artifactoryPublish
+- name: snapshot
+  image: runmymind/docker-android-sdk
+  volumes:
+  - name: gradle
+    path: /root/.gradle
+  environment:
+    PUBLISH_TO_JFROG: true
+    BINTRAY_USER:
+      from_secret: BINTRAY_USER
+    BINTRAY_API_KEY:
+      from_secret: BINTRAY_API_KEY
+    VERSION_NAME: 0.0.1-SNAPSHOT
+  commands:
+  - ./gradlew :json:clean :json:install :json:artifactoryPublish
+  - ./gradlew :okhttp3:clean :okhttp3:install :okhttp3:artifactoryPublish
+  - ./gradlew :okhttp3-android:clean :okhttp3-android:install :okhttp3-android:artifactoryPublish
 
 - name: release
   image: runmymind/docker-android-sdk
+  volumes:
+  - name: gradle
+    path: /root/.gradle
   environment:
     PUBLISH_TO_JCENTER: true
     BINTRAY_USER:
@@ -40,3 +49,7 @@ steps:
   when:
     event:
     - tag
+
+volumes:
+- name: gradle
+  temp: {}
