--- a/.drone.yml
+++ b/.drone.yml
@@ -12,22 +12,22 @@ steps:
   - ./gradlew :okhttp3-android:clean :okhttp3-android:build
   - ./gradlew :app:clean :app:build
 
-#- name: snapshot
-#  image: runmymind/docker-android-sdk
-#  volumes:
-#  - name: gradle
-#    path: /root/.gradle
-#  environment:
-#    PUBLISH_TO_JFROG: true
-#    BINTRAY_USER:
-#      from_secret: BINTRAY_USER
-#    BINTRAY_API_KEY:
-#      from_secret: BINTRAY_API_KEY
-#    VERSION_CODE: ${DRONE_BUILD_NUMBER}
-#    VERSION_NAME: 0.0.1-SNAPSHOT
-#  commands:
-#  - ./gradlew :okhttp3:clean :okhttp3:install :okhttp3:artifactoryPublish
-#  - ./gradlew :okhttp3-android:clean :okhttp3-android:install :okhttp3-android:artifactoryPublish
+- name: snapshot
+  image: runmymind/docker-android-sdk
+  volumes:
+  - name: gradle
+    path: /root/.gradle
+  environment:
+    PUBLISH_TO_JFROG: true
+    BINTRAY_USER:
+      from_secret: BINTRAY_USER
+    BINTRAY_API_KEY:
+      from_secret: BINTRAY_API_KEY
+    VERSION_CODE: ${DRONE_BUILD_NUMBER}
+    VERSION_NAME: 1.0.0-SNAPSHOT
+  commands:
+  - ./gradlew :okhttp3:clean :okhttp3:install :okhttp3:artifactoryPublish
+  - ./gradlew :okhttp3-android:clean :okhttp3-android:install :okhttp3-android:artifactoryPublish
 
 - name: release
   image: runmymind/docker-android-sdk
@@ -41,7 +41,7 @@ steps:
     BINTRAY_API_KEY:
       from_secret: BINTRAY_API_KEY
     VERSION_CODE: ${DRONE_BUILD_NUMBER}
-    VERSION_NAME: 0.0.1
+    VERSION_NAME: 1.0.0
   commands:
   - ./gradlew :okhttp3:clean :okhttp3:install :okhttp3:bintrayUpload
   - ./gradlew :okhttp3-android:clean :okhttp3-android:install :okhttp3-android:bintrayUpload
