.drone.yml 执行 release 时，不同时执行 snapshot

--- a/.drone.yml
+++ b/.drone.yml
@@ -28,6 +28,9 @@ steps:
   commands:
   - ./gradlew :okhttp3:clean :okhttp3:install :okhttp3:artifactoryPublish
   - ./gradlew :okhttp3-android:clean :okhttp3-android:install :okhttp3-android:artifactoryPublish
+  when:
+    event:
+    - push
 
 - name: release
   image: runmymind/docker-android-sdk
